--- a/admin/package.json
+++ b/admin/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^2.2.7",
     "@loadable/component": "^5.15.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,7 +12,6 @@
     "@types/jest": "^27.5.2",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^16.18.38",
-    "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "antd": "^5.7.0",
     "axios": "^1.4.0",
@@ -20,6 +20,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.17",
@@ -51,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.3.21",
+    "@types/recharts": "^1.8.29",
     "@types/styled-components": "^5.1.34"
   }
 }
